--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.8.0/fullcalendar.min.css">
   <link rel="stylesheet" type="text/css" href="vendor/primeui/primeui-ng-all.min.css" />
-  <link rel="stylesheet" type="text/css" href="/webfonts/ss-glyphish-outlined.css">
+  <link rel="stylesheet" type="text/css" href="webfonts/ss-glyphish-outlined.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
@@ -28,8 +28,8 @@
         System.import('main');
       }).catch(console.error.bind(console));
     </script>
-    <script type="text/javascript" src="/vendor/leaflet/dist/leaflet.js"></script>
-    <script type="text/javascript" src="/vendor/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-rc.1/leaflet.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.0.0-rc.1.0/leaflet.markercluster.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
